Implemented React Spring, improved mouse anim

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 $primary-color: #082348;
 $secondary-color: #021d44;
 $accent-color: #ff3e55;
+$overlay-color: #37619c;
 $font-stack: 'Quicksand', sans-serif;
 @mixin transform($property) {
   -webkit-transform: $property;
