--- a/src/components/Mouse/Mouse.scss
+++ b/src/components/Mouse/Mouse.scss
@@ -3,14 +3,23 @@
 .mouse-component {
   position: absolute;
   text-align: center;
-  width: 100px;
+  width: 150px;
   bottom: 50px;
   left: calc(50% - 50px);
   h2 {
     padding: 0.5em 0;
     color: #fff;
-    text-align: center;
+    text-align: right;
     letter-spacing: 8px;
-    font-weight: 400;
+    font-weight: 600;
+    text-transform: uppercase;
+  }
+  .mouse-svg {
+    width: 100px;
+    height: 100px;
+    #Mouse {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
