--- a/src/components/routes/ClientIntro.scss
+++ b/src/components/routes/ClientIntro.scss
@@ -1,14 +1,36 @@
 @import '../../index.scss';
 
 section.client-intro-wrapper {
+  position: fixed;
   width: 100vw;
   height: 100vh;
-  background: $primary-color;
+  background: $overlay-color;
+  .intro-title {
+    margin: 1em;
+    padding: 1em;
+    position: absolute;
 
+    z-index: 1;
+    color: #fff;
+    border: 1px solid #fff;
+    font-weight: 500;
+    font-size: 1.2em;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    line-height: 1.5;
+    text-align: center;
+  }
   .goo-wrapper {
     position: absolute;
-    opacity: 0.8;
     width: 100%;
     height: 100%;
+    opacity: 0.7;
   }
+}
+.intro-flex-container {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-flow: row nowrap;
 }
